configure hakyll, post

--- a/templates/head.html
+++ b/templates/head.html
@@ -68,6 +68,7 @@ if (window.navigator.appName == "Microsoft Internet Explorer") {
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/spaceg.stylesheets.css">
     <link rel="stylesheet" href="/static/css/syntax.css">
+    <link rel="stylesheet" href="/static/css/custom.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.8.0/styles/default.min.css">
 
     <!-- Fonts -->
