--- a/templates/nav.html
+++ b/templates/nav.html
@@ -19,10 +19,10 @@
                 <ul class="dropdown-menu"></ul>
                 </li>
 	           <li><a href="https://instagram.com/$instagram_username$/" target="_blank"><i class="fa fa-instagram" id="icon-top"></i></a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="/about.html">About</a></li>
                 <li><a href="/contact.html">Contact</a></li>
 
-                <li><a href="archive.html">Archive</a></li>
+                <li><a href="/archive.html">Archive</a></li>
                 <li><a href="https://www.twitter.com/$twitter_username$" id="roundbutton" target="_blank"><i class="fa fa-twitter"></i>$blog_author$</a></li>
             </ul>
         </div>
@@ -52,7 +52,7 @@
                                 <a href="https://www.twitter.com/katychuang" target="_blank">follow me</a>. <br> 
                                 <a href="https://www.github.com/katychuang" target="_blank">    <i class="fa fa-github" id="spaceg-social-modal"></i> </a> 
                                 <a href="https://www.twitter.com/katychuang" target="_blank"><i class="fa fa-twitter" id="spaceg-social-modal"></i> </a>    
-                                <a href="https://plus.google.com/u/0/111391719267336703432/posts" target="_blank"> <i class="fa fa-google-plus" id="spaceg-social-modal"></i></a> 
+                                <a href="https://plus.google.com/u/0/114379033449724089135" target="_blank"> <i class="fa fa-google-plus" id="spaceg-social-modal"></i></a> 
                             </p>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
