--- a/templates/nav.html
+++ b/templates/nav.html
@@ -43,16 +43,15 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h1 class="font-style-inline-small-h1">Lucas Gatsas</h1>
+                            <h1 class="font-style-inline-small-h1">Daniel Cardona Rojas</h1>
                             <hr class="star-primary">
                             <img src="/static/img/face.png" class="img-responsive img-centered" alt="" title="">
                             <p class="font-style-inline-small">
-                                Hello, my name is Lucas Gatsas, I'm a Front End Engineer <br>
-                                and Web Developer from Switzerland. This is my Personal Notice and Archive Work Experience Work Blog. My Official Website will be Up soon!  <br>
-                                <a href="https://www.twitter.com/katychuang" target="_blank">follow me</a>. <br> 
-                                <a href="https://www.github.com/katychuang" target="_blank">    <i class="fa fa-github" id="spaceg-social-modal"></i> </a> 
-                                <a href="https://www.twitter.com/katychuang" target="_blank"><i class="fa fa-twitter" id="spaceg-social-modal"></i> </a>    
-                                <a href="https://plus.google.com/u/0/114379033449724089135" target="_blank"> <i class="fa fa-google-plus" id="spaceg-social-modal"></i></a> 
+                                Hi I'm Daniel Cardona, a sound engineer from Colombia passionate about technology and programming
+                                <a href="https://twitter.com/cocolatecardona" target="_blank">follow me</a>. <br> 
+                                <a href="https://www.github.com/DanielCardonaRojas" target="_blank">    <i class="fa fa-github" id="spaceg-social-modal"></i> </a> 
+                                <a href="https://www.twitter.com/cocolatecardona" target="_blank"><i class="fa fa-twitter" id="spaceg-social-modal"></i> </a>    
+                                <a href="https://plus.google.com/u/1/114379033449724089135" target="_blank"> <i class="fa fa-google-plus" id="spaceg-social-modal"></i></a> 
                             </p>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
