--- a/templates/nav.html
+++ b/templates/nav.html
@@ -18,12 +18,11 @@
                     <a href="#portfolioModal2" data-toggle="modal"><i class="fa fa-random" id="icon-top"></i></a>
                 <ul class="dropdown-menu"></ul>
                 </li>
-	           <li><a href="https://instagram.com/$instagram_username$/" target="_blank"><i class="fa fa-instagram" id="icon-top"></i></a></li>
                 <li><a href="/about.html">About</a></li>
                 <li><a href="/contact.html">Contact</a></li>
 
                 <li><a href="/archive.html">Archive</a></li>
-                <li><a href="https://www.twitter.com/$twitter_username$" id="roundbutton" target="_blank"><i class="fa fa-twitter"></i>$blog_author$</a></li>
+                <li><a href="https://github.com/DanielCardonaRojas" id="roundbutton" target="_blank"><i class="fa fa-github" style="font-size:2rem;"></i>$blog_author$</a></li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -47,8 +46,8 @@
                             <hr class="star-primary">
                             <img src="/static/img/face.png" class="img-responsive img-centered" alt="" title="">
                             <p class="font-style-inline-small">
-                                Hello, my name is Lucas Gatsas, I'm a Front End Engineer <br>
-                                and Web Developer from Switzerland. This is my Personal Notice and Archive Work Experience Work Blog. My Official Website will be Up soon!  <br>
+                                Hello, my name is Daniel I am a sound Engineer from Colombia passionate about many things
+                                 This is my Personal Notice and Archive Work Experience Work Blog.  <br>
                                 <a href="https://www.twitter.com/katychuang" target="_blank">follow me</a>. <br> 
                                 <a href="https://www.github.com/katychuang" target="_blank">    <i class="fa fa-github" id="spaceg-social-modal"></i> </a> 
                                 <a href="https://www.twitter.com/katychuang" target="_blank"><i class="fa fa-twitter" id="spaceg-social-modal"></i> </a>    
